fix(layout): mobile layout issues

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -621,6 +621,10 @@ pre tt:after {
 }
 @media only screen and (max-width: 480px) {
   html {
-    font-size: 100%;
+    font-size: 70%;
+  }
+
+  img {
+    width: 70%;
   }
 }
