--- a/src/layouts/styles/layout-override.css
+++ b/src/layouts/styles/layout-override.css
@@ -10,7 +10,7 @@ body {
 }
 h1 {
   font-size: 1.5rem;
-  line-height: 0.5rem;
+  line-height: 1.4rem;
 }
 p, div {
   font-size: 16px;
